project/spring-project-deployment/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-starbucks-worker-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: spring-starbucks-worker
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: spring-starbucks-worker
    spec:
      containers:
      - name: spring-starbucks-worker
        image: thinhh/spring-starbucks-work
        -name: RABBIT_USERNAME
          value: "<RABBIT_USERNAME"
        -name: RABBIT_PASSWORD
          value: "<RABBIT_PASSWORD>"   
        ports:
        - containerPort: 8082
