project/spring-project-deployment/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-starbucks-api-service 
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80 
  selector:
    name: spring-starbucks-api
