project/spring-project-deployment/service-cashier.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-starbucks-cashier-service 
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081 
  selector:
    name: spring-starbucks-client
