project/spring-project-deployment/service-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-starbucks-worker-service 
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8082
    targetPort: 8082 
  selector:
    name: spring-starbucks-worker
